--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -138,9 +138,9 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
+    grid-gap: 2rem;
 
     @include breakpoint(md) {
-        grid-column-gap: 2rem;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
     }
@@ -166,6 +166,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        text-align: center;
 
         margin-top: 1.5rem;
 
@@ -201,8 +203,8 @@
     grid-area: 'blog';
 
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
     flex-wrap: wrap;
 }
 
@@ -211,25 +213,56 @@
     align-items: flex-start;
     justify-content: flex-start;
 
+    flex-direction: column;
+
+    @include breakpoint(md) {
+        flex-direction: row;
+    }
+
     &+.blog--gallery-item {
         margin-top: 2rem;
+
+        @include breakpoint(md) {
+            margin-top: 0;
+        }
     }
 
     &-featured {
-        height: 12rem;
-
         img {
-            height: 100%;
+            height: auto;
+            width: 100%;
+        }
+
+        @include breakpoint(md) {
+            height: 12rem;
+
+            img {
+                height: 100%;
+                width: auto;
+            }
         }
     }
 
     &-info {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-end;
+        align-items: center;
+        justify-content: center;
 
-        height: 12rem;
+        text-align: center;
+
+        margin-top: 1rem;
+
+        @include breakpoint(md) {
+            align-items: flex-start;
+            justify-content: flex-end;
+
+            height: 12rem;
+
+            text-align: left;
+
+            margin-top: 0;
+        }
 
         .entry-category {
             text-transform: uppercase;
