--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -32,6 +32,7 @@
     justify-content: center;
 
     height: 4rem;
+    width: 30rem;
 
     transform: scale(.75);
 
@@ -51,18 +52,25 @@
         white-space: nowrap;
     }
 
+    img {
+        height: auto;
+        width: 100%;
+    }
+
     // h1 {
     //     // height: 2.5rem;
     // }
 
     h6 {
-        margin-top: .5rem;
+        margin-top: 1rem;
 
         font-size: .85rem;
 
         transition: all .25s;
     }
 }
+
+// .header--left {}
 
 .header--sub {
     position: absolute;
@@ -102,7 +110,7 @@
 }
 
 .header--menu {
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
 
@@ -111,70 +119,203 @@
     }
 }
 
-.header--menu-primary {
-    list-style: none;
+.header--menu-toggle {
+    display: flex;
+    width: 1rem;
+    height: 2rem;
+    align-items: center;
+    justify-content: flex-start;
+
+    @include breakpoint(md) {
+        display: none;
+    }
+}
+
+.header--menu-close {
+    display: none;
+    position: fixed;
+    top: 1rem;
+    left: 0;
+    left: 0;
+    width: 100%;
+    height: 2rem;
+    align-items: center;
+    justify-content: center;
+
+    @include breakpoint(md) {
+        display: none;
+    }
+}
+
+.header--menu-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
 
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 
-    margin: 0;
-    padding: 0;
+    visibility: hidden;
+    opacity: 0;
 
-    .header--menu-item {
-        position: relative;
+    width: 100%;
+    height: 100%;
+
+    background-color: white;
+
+    transition: all .5s;
+
+    @include breakpoint(md) {
+        position: unset;
+        top: unset;
+        left: unset;
+
+        width: unset;
+        height: unset;
+
+        visibility: visible;
+        opacity: 1;
+    }
+
+    &.is-active {
+        visibility: visible;
+        opacity: 1;
+
+        transition: all .5s;
+
+        .header--menu-close {
+            display: flex;
+
+            @include breakpoint(md) {
+                display: none;
+            }
+        }
+    }
+
+    >ul {
+        list-style: none;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        margin: 0;
+        padding: 0;
+        margin-top: -10rem;
+
+        @include breakpoint(md) {
+            flex-direction: row;
+            margin-top: 0;
+        }
+
+        .header--menu-item {
+            position: relative;
+
+            opacity: .5;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            height: 3rem;
+
+            text-transform: uppercase;
+            font-size: .85rem;
+            font-weight: bold;
+
+            padding: 0 1.5rem;
+
+            cursor: pointer;
+
+            &+.header--menu-item {
+                @include breakpoint(md) {
+                    margin-left: 1rem;
+                }
+            }
+
+            @include breakpoint(md) {
+                opacity: 1;
+            }
+
+            &:after {
+                content: '';
+
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+
+                display: block;
+
+                height: 0.2rem;
+                width: 100%;
+
+                background-color: transparent;
+
+                transition: all .5s;
+            }
+
+            &:hover {
+                opacity: 1;
+
+                &:after {
+                    @include breakpoint(md) {
+                        background-color: $ui-border-color;
+                    }
+                }
+            }
+
+            &.is-active {
+                opacity: 1;
+
+                &:after {
+                    @include breakpoint(md) {
+                        background-color: $color-text-regular;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.header--menu-mobile-footer {
+    position: absolute;
+    bottom: 2rem;
+
+    @include breakpoint(md) {
+        display: none;
+    }
+
+    &-social {
+        list-style: none;
 
         display: flex;
         align-items: center;
         justify-content: center;
 
-        height: 3rem;
+        margin: 1rem 0;
+        padding: 0;
+    }
 
-        text-transform: uppercase;
+    &-social-item {
+        margin: 0 .5rem;
+    }
+
+    &-copyright {
+        opacity: .5;
+        margin: 1rem 0 0;
+
         font-size: .85rem;
-        font-weight: bold;
 
-        padding: 0 1.5rem;
-
-        cursor: pointer;
-
-        &+.header--menu-item {
-            margin-left: 1rem;
-        }
-
-        &:after {
-            content: '';
-
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-
-            display: block;
-
-            height: 0;
-            width: 100%;
-
-            background-color: transparent;
-
-            transition: all .5s;
-        }
-
-        &:hover {
-            &:after {
-                height: 0.2rem;
-
-                background-color: $ui-border-color;
-            }
-        }
-
-        &.is-active {
-            &:after {
-                height: 0.2rem;
-
-                background-color: $color-text-regular;
-            }
+        @include breakpoint(md) {
+            margin: 0;
         }
     }
 }
+
+// .header--menu-primary {}
 
 #header.is-scroll {
     margin-top: 0;
@@ -202,7 +343,9 @@
     }
 
     .header--menu {
-        transform: scale(0);
+        @include breakpoint(md) {
+            transform: scale(0);
+        }
     }
 
     &.is-scroll-up {
@@ -217,7 +360,9 @@
         }
 
         .header--menu {
-            transform: scale(1);
+            @include breakpoint(md) {
+                transform: scale(1);
+            }
         }
     }
 }
