--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -5,6 +5,7 @@
     height: 100vh;
     // max-height: 60rem;
 
+    margin-bottom: 3rem;
     padding: 0 !important;
 
     // background-color: $ui-border-color;
@@ -297,6 +298,8 @@
 
 
 #private-club {
+    position: relative;
+
     width: 100%;
 
     color: white;
@@ -315,10 +318,6 @@
                 rgba($color-text-regular, 0) 90%,
                 rgba($color-text-regular, 0) 100%);
     }
-
-    .row {
-        margin: 0;
-    }
 }
 
 .private-club--left {
@@ -327,10 +326,14 @@
     align-items: flex-start;
     justify-content: space-between;
 
-    padding: 1rem;
+    text-align: center;
+
+    padding: 0;
 
     @include breakpoint(md) {
-        padding: 0 5vw;
+        height: 50vh;
+        text-align: left;
+        // padding: 0 5vw;
     }
 
     .content-top {
@@ -344,7 +347,7 @@
     }
 
     .content-bottom {
-        margin-top: 3rem;
+        margin-top: 2rem;
 
         h5 {
             color: $color-accent-secondary;
@@ -355,10 +358,10 @@
         }
 
         p {
-            max-width: 20rem;
             color: white;
 
             @include breakpoint(md) {
+                max-width: 20rem;
                 color: $color-accent-secondary;
             }
         }
@@ -369,17 +372,28 @@
     display: flex;
     align-items: center;
 
-    padding: 1.5rem 0 0;
+    padding: 1.5rem 0 1rem;
 
     @include breakpoint(md) {
         padding: 0;
+        height: 50rem;
+
+        position: absolute;
+        top: 5rem;
+        right: 0;
     }
 
     img {
         display: block;
-        height: 60vh;
+        height: 30rem;
         width: 100%;
         object-fit: cover;
+
+        @include breakpoint(md) {
+            height: 50rem;
+
+            position: absolute;
+        }
     }
 }
 
