--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
   */
 @import url("addons/jquery.modal.css");
 @import url("addons/jquery.flickity.css");
+@import url("addons/jquery.flickity.fade.css");
 @import url("addons/fontawesome/all.css");
 @import url("addons/bootstrap-grid.css");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap&subset=vietnamese");
@@ -422,6 +423,7 @@ th {
 }
 
 html {
+  position: relative;
   font-family: 'Montserrat', sans-serif;
   font-size: 13px;
   color: #292929;
@@ -432,6 +434,7 @@ html {
 }
 
 body {
+  position: relative;
   background-color: #fafafa;
 }
 
@@ -532,6 +535,7 @@ input {
   -webkit-box-shadow: none;
           box-shadow: none;
   -webkit-appearance: none;
+  -webkit-user-select: text;
 }
 
 input::-webkit-input-placeholder {
@@ -796,6 +800,7 @@ h6 {
       -ms-flex-pack: center;
           justify-content: center;
   height: 4rem;
+  width: 30rem;
   -webkit-transform: scale(0.75);
           transform: scale(0.75);
   margin: 1rem 0;
@@ -817,8 +822,13 @@ h6 {
   white-space: nowrap;
 }
 
+.header--logo img {
+  height: auto;
+  width: 100%;
+}
+
 .header--logo h6 {
-  margin-top: .5rem;
+  margin-top: 1rem;
   font-size: .85rem;
   -webkit-transition: all .25s;
   transition: all .25s;
@@ -865,7 +875,9 @@ h6 {
 }
 
 .header--menu {
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -882,17 +894,135 @@ h6 {
   }
 }
 
-.header--menu-primary {
+.header--menu-toggle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 1rem;
+  height: 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+@media (min-width: 992px) {
+  .header--menu-toggle {
+    display: none;
+  }
+}
+
+.header--menu-close {
+  display: none;
+  position: fixed;
+  top: 1rem;
+  left: 0;
+  left: 0;
+  width: 100%;
+  height: 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media (min-width: 992px) {
+  .header--menu-close {
+    display: none;
+  }
+}
+
+.header--menu-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  visibility: hidden;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+@media (min-width: 992px) {
+  .header--menu-wrapper {
+    position: unset;
+    top: unset;
+    left: unset;
+    width: unset;
+    height: unset;
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+.header--menu-wrapper.is-active {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.header--menu-wrapper.is-active .header--menu-close {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (min-width: 992px) {
+  .header--menu-wrapper.is-active .header--menu-close {
+    display: none;
+  }
+}
+
+.header--menu-wrapper > ul {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   padding: 0;
+  margin-top: -10rem;
 }
 
-.header--menu-primary .header--menu-item {
+@media (min-width: 992px) {
+  .header--menu-wrapper > ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-top: 0;
+  }
+}
+
+.header--menu-wrapper > ul .header--menu-item {
   position: relative;
+  opacity: .5;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -910,32 +1040,92 @@ h6 {
   cursor: pointer;
 }
 
-.header--menu-primary .header--menu-item + .header--menu-item {
-  margin-left: 1rem;
+@media (min-width: 992px) {
+  .header--menu-wrapper > ul .header--menu-item + .header--menu-item {
+    margin-left: 1rem;
+  }
 }
 
-.header--menu-primary .header--menu-item:after {
+@media (min-width: 992px) {
+  .header--menu-wrapper > ul .header--menu-item {
+    opacity: 1;
+  }
+}
+
+.header--menu-wrapper > ul .header--menu-item:after {
   content: '';
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
   display: block;
-  height: 0;
+  height: 0.2rem;
   width: 100%;
   background-color: transparent;
   -webkit-transition: all .5s;
   transition: all .5s;
 }
 
-.header--menu-primary .header--menu-item:hover:after {
-  height: 0.2rem;
-  background-color: #dadada;
+.header--menu-wrapper > ul .header--menu-item:hover {
+  opacity: 1;
 }
 
-.header--menu-primary .header--menu-item.is-active:after {
-  height: 0.2rem;
-  background-color: #292929;
+@media (min-width: 992px) {
+  .header--menu-wrapper > ul .header--menu-item:hover:after {
+    background-color: #dadada;
+  }
+}
+
+.header--menu-wrapper > ul .header--menu-item.is-active {
+  opacity: 1;
+}
+
+@media (min-width: 992px) {
+  .header--menu-wrapper > ul .header--menu-item.is-active:after {
+    background-color: #292929;
+  }
+}
+
+.header--menu-mobile-footer {
+  position: absolute;
+  bottom: 2rem;
+}
+
+@media (min-width: 992px) {
+  .header--menu-mobile-footer {
+    display: none;
+  }
+}
+
+.header--menu-mobile-footer-social {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 1rem 0;
+  padding: 0;
+}
+
+.header--menu-mobile-footer-social-item {
+  margin: 0 .5rem;
+}
+
+.header--menu-mobile-footer-copyright {
+  opacity: .5;
+  margin: 1rem 0 0;
+  font-size: .85rem;
+}
+
+@media (min-width: 992px) {
+  .header--menu-mobile-footer-copyright {
+    margin: 0;
+  }
 }
 
 #header.is-scroll {
@@ -970,9 +1160,11 @@ h6 {
   display: none;
 }
 
-#header.is-scroll .header--menu {
-  -webkit-transform: scale(0);
-          transform: scale(0);
+@media (min-width: 992px) {
+  #header.is-scroll .header--menu {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
 }
 
 #header.is-scroll.is-scroll-up {
@@ -989,9 +1181,11 @@ h6 {
           transform: scale(0.75);
 }
 
-#header.is-scroll.is-scroll-up .header--menu {
-  -webkit-transform: scale(1);
-          transform: scale(1);
+@media (min-width: 992px) {
+  #header.is-scroll.is-scroll-up .header--menu {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
 
 #footer {
@@ -1090,6 +1284,7 @@ h6 {
   display: block;
   width: 100%;
   height: 100vh;
+  margin-bottom: 3rem;
   padding: 0 !important;
 }
 
@@ -1439,6 +1634,7 @@ h6 {
 }
 
 #private-club {
+  position: relative;
   width: 100%;
   color: white;
   background: #292929;
@@ -1451,10 +1647,6 @@ h6 {
     background: -webkit-gradient(linear, left top, right top, from(#292929), color-stop(90%, #292929), color-stop(90%, rgba(41, 41, 41, 0)), to(rgba(41, 41, 41, 0)));
     background: linear-gradient(to right, #292929 0%, #292929 90%, rgba(41, 41, 41, 0) 90%, rgba(41, 41, 41, 0) 100%);
   }
-}
-
-#private-club .row {
-  margin: 0;
 }
 
 .private-club--left {
@@ -1471,12 +1663,14 @@ h6 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1rem;
+  text-align: center;
+  padding: 0;
 }
 
 @media (min-width: 992px) {
   .private-club--left {
-    padding: 0 5vw;
+    height: 50vh;
+    text-align: left;
   }
 }
 
@@ -1489,7 +1683,7 @@ h6 {
 }
 
 .private-club--left .content-bottom {
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 
 .private-club--left .content-bottom h5 {
@@ -1503,12 +1697,12 @@ h6 {
 }
 
 .private-club--left .content-bottom p {
-  max-width: 20rem;
   color: white;
 }
 
 @media (min-width: 992px) {
   .private-club--left .content-bottom p {
+    max-width: 20rem;
     color: #d2bc8f;
   }
 }
@@ -1520,21 +1714,32 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1.5rem 0 0;
+  padding: 1.5rem 0 1rem;
 }
 
 @media (min-width: 992px) {
   .private-club--right {
     padding: 0;
+    height: 50rem;
+    position: absolute;
+    top: 5rem;
+    right: 0;
   }
 }
 
 .private-club--right img {
   display: block;
-  height: 60vh;
+  height: 30rem;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+@media (min-width: 992px) {
+  .private-club--right img {
+    height: 50rem;
+    position: absolute;
+  }
 }
 
 #enquiry {
