--- a/sass/_basics.scss
+++ b/sass/_basics.scss
@@ -9,6 +9,7 @@
 
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap&subset=vietnamese');
+@import url('https://fonts.googleapis.com/css?family=Prata&display=swap&subset=vietnamese');
 
 @font-face {
     font-family: 'Bodoni';
