--- a/sass/_configs.scss
+++ b/sass/_configs.scss
@@ -27,7 +27,9 @@ $color-background: #fafafa;
 $ui-border-color: #dadada;
 $ui-border-width: 1px;
 
-$font-serif: 'Prata',
+$font-sans: 'Monserrat',
+sans-serif;
+$font-serif: 'Bodoni',
 serif;
 
 
