--- a/sass/_ui.scss
+++ b/sass/_ui.scss
@@ -250,9 +250,9 @@ input {
 }
 
 /* arrow color */
-.flickity-prev-next-button .arrow {
-    // fill: white;
-}
+// .flickity-prev-next-button .arrow {
+//     // fill: white;
+// }
 
 .flickity-prev-next-button.no-svg {
     color: white;
