--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -503,7 +503,7 @@
     text-align: center;
 
     h2 {
-        width: 45rem;
+        max-width: 45rem;
         margin: 0 auto;
 
         &:before {
@@ -513,6 +513,98 @@
         &:after {
             content: '"';
         }
+    }
+}
+
+// #membership {
+// }
+
+.membership--item-image {
+    img {
+        display: block;
+        width: 70%;
+
+        margin: 0 auto;
+    }
+
+    &:after {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 3rem;
+
+        margin: 0 auto;
+        margin-top: -1.5rem;
+
+        background-image: url('./img/layout/shadow.png');
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+}
+
+.membership--item-info {
+    text-align: center;
+
+    h3 {
+        // text-transform: uppercase;
+        // font-family: $font-sans;
+        // font-weight: bold;
+
+        margin: 1rem 0 2rem;
+    }
+
+    ul {
+        list-style: none;
+
+        margin: 0;
+        padding: 0;
+
+        &:before,
+        &:after {
+            content: '';
+            display: block;
+            width: 40%;
+            height: 1px;
+            margin: 1rem auto;
+            background-color: rgba($color-text-light, 0.125);
+        }
+
+        li {
+            &+li {
+
+                &:before {
+                    content: '';
+                    display: block;
+                    width: 40%;
+                    height: 1px;
+                    margin: 1rem auto;
+                    background-color: rgba($color-text-light, 0.125);
+                }
+            }
+
+            position: relative;
+            color: $color-text-light;
+            text-transform: uppercase;
+            font-size: .85rem;
+
+            &.is-disabled {
+                color: rgba($color-text-light, 0.25);
+            }
+        }
+    }
+}
+
+.membership--item-fee {
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
+
+    span {
+        color: $color-text-light;
+        font-size: .85rem;
+        margin-right: .5rem;
+        vertical-align: super;
     }
 }
 
