--- a/style.css
+++ b/style.css
@@ -793,7 +793,7 @@ p + *,
 h1 {
   font-size: 3rem;
   font-weight: normal;
-  font-family: "Prata", serif;
+  font-family: "Bodoni", serif;
   text-transform: none;
   line-height: 1.5;
 }
@@ -801,7 +801,7 @@ h1 {
 h2 {
   font-size: 2rem;
   font-weight: normal;
-  font-family: "Prata", serif;
+  font-family: "Bodoni", serif;
   text-transform: none;
   line-height: 1.5;
   -webkit-text-stroke-width: 0.2px;
@@ -810,7 +810,7 @@ h2 {
 h3 {
   font-size: 1.5rem;
   font-weight: normal;
-  font-family: "Prata", serif;
+  font-family: "Bodoni", serif;
   text-transform: none;
   line-height: 1.5;
   -webkit-text-stroke-width: 0.2px;
@@ -819,7 +819,7 @@ h3 {
 h4 {
   font-size: 1.25rem;
   font-weight: normal;
-  font-family: "Prata", serif;
+  font-family: "Bodoni", serif;
   text-transform: none;
   line-height: 1.5;
   -webkit-text-stroke-width: 0.2px;
@@ -1957,7 +1957,7 @@ h6 {
 }
 
 .testimonial--carousel-item h2 {
-  width: 45rem;
+  max-width: 45rem;
   margin: 0 auto;
 }
 
@@ -1967,6 +1967,81 @@ h6 {
 
 .testimonial--carousel-item h2:after {
   content: '"';
+}
+
+.membership--item-image img {
+  display: block;
+  width: 70%;
+  margin: 0 auto;
+}
+
+.membership--item-image:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 3rem;
+  margin: 0 auto;
+  margin-top: -1.5rem;
+  background-image: url("./img/layout/shadow.png");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.membership--item-info {
+  text-align: center;
+}
+
+.membership--item-info h3 {
+  margin: 1rem 0 2rem;
+}
+
+.membership--item-info ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.membership--item-info ul:before, .membership--item-info ul:after {
+  content: '';
+  display: block;
+  width: 40%;
+  height: 1px;
+  margin: 1rem auto;
+  background-color: rgba(136, 136, 136, 0.125);
+}
+
+.membership--item-info ul li {
+  position: relative;
+  color: #888888;
+  text-transform: uppercase;
+  font-size: .85rem;
+}
+
+.membership--item-info ul li + li:before {
+  content: '';
+  display: block;
+  width: 40%;
+  height: 1px;
+  margin: 1rem auto;
+  background-color: rgba(136, 136, 136, 0.125);
+}
+
+.membership--item-info ul li.is-disabled {
+  color: rgba(136, 136, 136, 0.25);
+}
+
+.membership--item-fee {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.membership--item-fee span {
+  color: #888888;
+  font-size: .85rem;
+  margin-right: .5rem;
+  vertical-align: super;
 }
 
 #mailling-list {
