--- a/sass/_configs.scss
+++ b/sass/_configs.scss
@@ -19,7 +19,7 @@ $color-text-light: #888888;
 
 $color-accent-primary: #00004d;
 $color-accent-secondary: #d2bc8f;
-$color-background: #fafafa;
+$color-background: #ffffff;
 
 
 // UI
