--- a/addons/jquery.modal.css
+++ b/addons/jquery.modal.css
@@ -1,4 +1,4 @@
-.modal {
+.blocker {
 	position: fixed;
 	top: 0;
 	right: 0;
@@ -7,7 +7,7 @@
 	width: 100%;
 	height: 100%;
 	overflow: auto;
-	z-index: 1;
+	z-index: 1000000;
 	padding: 20px;
 	box-sizing: border-box;
 	background-color: rgb(0, 0, 0);
@@ -15,7 +15,7 @@
 	text-align: center;
 }
 
-.modal:before {
+.blocker:before {
 	content: "";
 	display: inline-block;
 	height: 100%;
@@ -23,11 +23,11 @@
 	margin-right: -0.05em;
 }
 
-.modal.behind {
+.blocker.behind {
 	background-color: transparent;
 }
 
-.modal-content {
+.modal {
 	display: none;
 	vertical-align: middle;
 	position: relative;
@@ -50,7 +50,7 @@
 	text-align: left;
 }
 
-.modal-content a.close-modal {
+.modal a.close-modal {
 	position: absolute;
 	top: -12.5px;
 	right: -12.5px;
