--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -46,10 +46,7 @@
 }
 
 .footer--menu-item {
-    text-transform: uppercase;
-    font-size: .85rem;
-    font-weight: bold;
-
+    @include small-text;
     margin: .5rem 1rem;
 }
 
