--- a/sass/_peter.scss
+++ b/sass/_peter.scss
@@ -1,5 +1,45 @@
 .peter {
 
+    h5 {
+        font-size: .75rem;
+        font-weight: normal;
+        letter-spacing: .2em;
+    }
+
+    @mixin small-text {
+        font-size: .75rem;
+        font-weight: normal;
+        font-family: $h5-font;
+        text-transform: $h5-transform;
+        line-height: $h5-lineheight;
+        letter-spacing: .2em;
+    }
+
+    .small-text {
+        @include small-text;
+    }
+
+    .header--right {
+        transform: translateY(1.5rem);
+        transition: all .25s;
+    }
+
+    #header {
+        &.is-scroll {
+            .header--right {
+                transform: translateY(0);
+                transition: all .25s;
+            }
+        }
+
+        &.is-scroll-up {
+            .header--right {
+                transform: translateY(1.25rem);
+                transition: all .25s;
+            }
+        }
+    }
+
     .header--logo {
         h6 {
             font-family: $font-serif;
@@ -9,9 +49,17 @@
         }
     }
 
-    .header--menu-item {
-        letter-spacing: .2em;
-        font-weight: normal !important;
+    .header--menu-wrapper {
+        >ul {
+            .header--menu-item {
+                @include small-text;
+            }
+        }
+    }
+
+    .footer--menu-item {
+        @include small-text;
+        margin: .5rem 1rem;
     }
 
     .flickity-prev-next-button .arrow {
@@ -38,48 +86,106 @@
             max-width: 75rem;
             margin: 0 auto;
             text-align: center;
+            // text-shadow: 1.5px 1.5px 0px rgba(0, 0, 0, 0.5);
+            text-shadow: 0 0 5px rgba(black, 0.75);
 
             @include breakpoint(md) {
                 font-size: 5rem;
             }
         }
 
-        background-color: rgba(black, 0.25);
+        background-color: rgba(#cccccc, 0.25);
+    }
+
+    .intro--menu-link {
+        @include small-text;
+
+        border-bottom-width: .1rem;
+    }
+
+    .services--item {
+        @include breakpoint(md) {
+            &:nth-child(2n) {
+                transform: translateY(0);
+            }
+        }
+    }
+
+    .services--item-info {
+        box-shadow: 0 0 20px rgba(black, .125);
+    }
+
+    .services--more {
+        margin-top: 5rem;
+    }
+
+    #testimonial {
+        display: none;
+        padding-bottom: 8rem;
     }
 
     #membership {
         padding-bottom: 5rem !important;
 
-        background-image: linear-gradient(rgba(black, 0.25)), url('./img/membership/background.jpg');
+        background-image: linear-gradient(rgba(black, 0)), url('./img/membership/background.jpg');
         background-size: cover;
+        background-attachment: fixed;
         color: white;
 
-        text-shadow: 0 0 50px rgba(black, .75);
+        text-shadow: 0 1px 1px rgba(black, 0.5);
+
+        // .membership--item {
+        // }
+
+        @include breakpoint(md) {
+            background-attachment: scroll;
+        }
 
 
         .membership--item-image {
             img {
+                width: 90%;
+
                 position: relative;
                 z-index: 2;
                 margin-bottom: 2rem;
+
+                transition: all .25s;
+            }
+
+            &:after {
+                content: '';
+                display: block;
+                width: 80%;
+                height: 11rem;
+                margin: 0 auto;
+                background-image: none;
+                background-color: black;
+                position: absolute;
+                top: 1rem;
+                left: 2.5rem;
+                filter: blur(10px);
+                z-index: 1;
+                opacity: .5;
+
+                transition: all .25s;
+            }
+
+            &:hover {
+                img {
+                    transform: scale(1.05);
+                    transition: all .25s;
+                }
+
+                &:after {
+                    top: 1.5rem;
+                    left: 3rem;
+
+                    transition: all .25s;
+                }
             }
         }
 
-        .membership--item-image::after {
-            content: '';
-            display: block;
-            width: 60%;
-            height: 8rem;
-            margin: 0 auto;
-            background-image: none;
-            background-color: black;
-            position: absolute;
-            top: 1.5rem;
-            right: 3.5rem;
-            filter: blur(10px);
-            z-index: 1;
-            opacity: .5;
-        }
 
         .membership--item-info {
             ul {
@@ -87,27 +193,51 @@
                 &:before,
                 &:after {
                     background-color: rgba(white, .5);
-
                 }
 
                 li {
                     color: unset;
+                    @include small-text;
                     font-weight: bold;
+
 
                     &::before {
                         background-color: rgba(white, .5);
                     }
 
                     &.is-disabled {
-                        color: darken(white, 10);
+                        color: darken(white, 25);
                     }
                 }
             }
         }
 
         .membership--item-fee {
+            font-weight: normal;
+
             span {
                 color: white;
+            }
+        }
+
+        .membership--item-apply {
+            @include small-text;
+
+            margin-top: 2rem;
+
+            a {
+                border: .2rem solid;
+                padding: 1rem 2rem;
+                font-weight: bold;
+            }
+        }
+
+        .master-key {
+            .membership--item-apply {
+                // margin-top: 2rem;
+                // font-size: 1.5rem;
+                font-weight: bold;
+
             }
         }
     }
@@ -129,8 +259,9 @@
         height: 100%;
 
         color: white;
+        text-shadow: 1.5px 1.5px 0 rgba(black, 0.5);
 
-        background-color: rgba(black, 0.25);
+        // background-color: rgba(#cccccc, 0.25);
 
         z-index: 4;
 
@@ -138,6 +269,13 @@
 
         >div {
             text-align: center;
+
+            background-color: rgba(black, 0.75);
+            padding: 5rem;
+        }
+
+        h1 {
+            font-size: 5rem;
         }
 
         h5 {
@@ -146,52 +284,65 @@
     }
 
     .private-club-peter--carousel-item {
-        width: 100%;
-        height: 100vh;
-        max-height: 50rem;
+        width: auto;
+        height: calc(100vh - 4rem);
+        max-height: 80rem;
 
         background-size: cover;
         background-position: center;
 
-        &:nth-child(1) {
-            background-image: url('./img/private-club/01.jpg');
-        }
+        img {
+            height: 100%;
+            width: auto;
 
-        &:nth-child(2) {
-            background-image: url('./img/private-club/02.jpg');
-        }
-
-        &:nth-child(3) {
-            background-image: url('./img/private-club/03.jpg');
-        }
-
-        &:nth-child(4) {
-            background-image: url('./img/private-club/04.jpg');
-        }
-
-        &:nth-child(5) {
-            background-image: url('./img/private-club/05.jpg');
-        }
-
-        &:nth-child(6) {
-            background-image: url('./img/private-club/06.jpg');
-        }
-
-        &:nth-child(7) {
-            background-image: url('./img/private-club/07.jpg');
-        }
-
-        &:nth-child(8) {
-            background-image: url('./img/private-club/08.jpg');
-        }
-
-        &:nth-child(9) {
-            background-image: url('./img/private-club/09.jpg');
-        }
-
-        &:nth-child(10) {
-            background-image: url('./img/private-club/10.jpg');
+            object-fit: unset;
         }
     }
+
+    #enquiry {
+        h5 {
+            margin-bottom: 1rem;
+        }
+    }
+
+    #mailing-list {
+        border: none !important;
+
+        &:after {
+            display: none !important;
+        }
+    }
+
+    .mailing-list-title {
+        h2 {
+            margin-top: 0rem;
+            font-size: .85rem;
+            font-weight: normal;
+            letter-spacing: .2em;
+            font-family: $font-sans;
+        }
+    }
+
+    .footer--outer::after {
+        display: none;
+    }
+
+    .footer--logo {
+        display: block;
+        width: 6rem;
+        height: 6rem;
+        filter: grayscale(1);
+        opacity: .25;
+        margin: 2rem auto;
+    }
+
+    .footer--social {
+        font-size: 1.7rem;
+    }
+
+    .footer--menu {
+        margin-bottom: 2.5rem;
+    }
+
 
 }
