--- a/style.css
+++ b/style.css
@@ -472,6 +472,99 @@ a {
   transition: all .25s;
 }
 
+* + h1,
+* + h2,
+* + h3,
+* + h4,
+* + h5,
+* + h6,
+* + p {
+  margin-bottom: 1.5rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  margin: 0;
+}
+
+h1 + *,
+h2 + *,
+h3 + *,
+h4 + *,
+h5 + *,
+h6 + *,
+p + *,
+.h1 + *,
+.h2 + *,
+.h3 + *,
+.h4 + *,
+.h5 + *,
+.h6 + * {
+  margin-top: 1.5rem;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: normal;
+  font-family: "Bodoni", serif;
+  text-transform: none;
+  line-height: 1.5;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: normal;
+  font-family: "Bodoni", serif;
+  text-transform: none;
+  line-height: 1.5;
+  -webkit-text-stroke-width: 0.2px;
+}
+
+h3 {
+  font-size: 1.5rem;
+  font-weight: normal;
+  font-family: "Bodoni", serif;
+  text-transform: none;
+  line-height: 1.5;
+  -webkit-text-stroke-width: 0.2px;
+}
+
+h4 {
+  font-size: 1.25rem;
+  font-weight: normal;
+  font-family: "Bodoni", serif;
+  text-transform: none;
+  line-height: 1.5;
+  -webkit-text-stroke-width: 0.2px;
+}
+
+h5 {
+  font-size: 0.85rem;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  line-height: 1.5;
+}
+
+h6 {
+  font-size: 0.85rem;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  line-height: 1.5;
+}
+
 section {
   position: relative;
 }
@@ -571,11 +664,21 @@ input::placeholder {
   text-transform: uppercase;
   font-size: .85rem;
   font-weight: bold;
+  border-radius: .25rem;
+}
+
+.button i {
+  margin-right: .5rem;
 }
 
 .button.medium {
   height: 3rem;
   padding: 0 2rem;
+}
+
+.button.solid {
+  background: #03afff;
+  color: white;
 }
 
 .button.ghost {
@@ -589,9 +692,16 @@ input::placeholder {
 }
 
 .small-text {
-  font-size: 0.75rem;
-  text-transform: uppercase;
+  font-size: 0.85rem;
   font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  line-height: 1.5;
+}
+
+.link.underline {
+  border-bottom: .1rem solid currentColor;
+  padding-bottom: .3rem;
 }
 
 .link.line-right {
@@ -701,6 +811,15 @@ input::placeholder {
   color: #d2bc8f;
 }
 
+.section-title p {
+  width: 90%;
+  max-width: 50rem;
+  font-family: "Bodoni", serif;
+  font-size: 1.5rem;
+  margin-top: -2rem;
+  margin-bottom: 4rem;
+}
+
 .flickity-page-dots {
   max-width: 10rem;
   display: -webkit-box;
@@ -771,105 +890,12 @@ input::placeholder {
   background-color: rgba(0, 0, 0, 0);
 }
 
-* + h1,
-* + h2,
-* + h3,
-* + h4,
-* + h5,
-* + h6,
-* + p {
-  margin-bottom: 1.5rem;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-  margin: 0;
-}
-
-h1 + *,
-h2 + *,
-h3 + *,
-h4 + *,
-h5 + *,
-h6 + *,
-p + *,
-.h1 + *,
-.h2 + *,
-.h3 + *,
-.h4 + *,
-.h5 + *,
-.h6 + * {
-  margin-top: 1.5rem;
-}
-
-h1 {
-  font-size: 3rem;
-  font-weight: normal;
-  font-family: "Bodoni", serif;
-  text-transform: none;
-  line-height: 1.5;
-}
-
-h2 {
-  font-size: 2rem;
-  font-weight: normal;
-  font-family: "Bodoni", serif;
-  text-transform: none;
-  line-height: 1.5;
-  -webkit-text-stroke-width: 0.2px;
-}
-
-h3 {
-  font-size: 1.5rem;
-  font-weight: normal;
-  font-family: "Bodoni", serif;
-  text-transform: none;
-  line-height: 1.5;
-  -webkit-text-stroke-width: 0.2px;
-}
-
-h4 {
-  font-size: 1.25rem;
-  font-weight: normal;
-  font-family: "Bodoni", serif;
-  text-transform: none;
-  line-height: 1.5;
-  -webkit-text-stroke-width: 0.2px;
-}
-
-h5 {
-  font-size: 0.85rem;
-  font-weight: bold;
-  font-family: "Montserrat", sans-serif;
-  text-transform: uppercase;
-  line-height: 1.5;
-}
-
-h6 {
-  font-size: 0.85rem;
-  font-weight: bold;
-  font-family: "Montserrat", sans-serif;
-  text-transform: uppercase;
-  line-height: 1.5;
-}
-
 #header {
   position: fixed;
   top: 0;
   width: 100%;
-  -webkit-box-shadow: 0 5px 20px rgba(41, 41, 41, 0.04);
-          box-shadow: 0 5px 20px rgba(41, 41, 41, 0.04);
+  -webkit-box-shadow: 0 5px 10px rgba(41, 41, 41, 0.125);
+          box-shadow: 0 5px 10px rgba(41, 41, 41, 0.125);
   -webkit-transition: all .25s;
   transition: all .25s;
   z-index: 999;
@@ -877,7 +903,6 @@ h6 {
 
 .header--outer {
   background-color: white;
-  border-bottom: 1px solid #dadada;
 }
 
 .header--main {
@@ -892,6 +917,50 @@ h6 {
           justify-content: space-between;
   -webkit-transition: all .25s;
   transition: all .25s;
+}
+
+.header--main > * {
+  width: 100%;
+}
+
+.header--left {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+@media (min-width: 992px) {
+  .header--left {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.header--right {
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+@media (min-width: 992px) {
+  .header--right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .header--logo {
@@ -919,6 +988,8 @@ h6 {
 
 @media (min-width: 992px) {
   .header--logo {
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
     -webkit-transform: scale(1);
             transform: scale(1);
     margin: 2rem 0;
@@ -1353,9 +1424,11 @@ h6 {
 }
 
 .footer--menu-item {
-  text-transform: uppercase;
-  font-size: .85rem;
+  font-size: 0.85rem;
   font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  line-height: 1.5;
   margin: .5rem 1rem;
 }
 
@@ -1868,7 +1941,7 @@ h6 {
 }
 
 .private-club--left .content-top h1 {
-  color: #d2bc8f;
+  color: #03afff;
 }
 
 .private-club--left .content-top p {
@@ -1880,7 +1953,7 @@ h6 {
 }
 
 .private-club--left .content-bottom h5 {
-  color: #d2bc8f;
+  color: #03afff;
 }
 
 @media (min-width: 992px) {
@@ -1896,7 +1969,7 @@ h6 {
 @media (min-width: 992px) {
   .private-club--left .content-bottom p {
     max-width: 20rem;
-    color: #d2bc8f;
+    color: #03afff;
   }
 }
 
@@ -1945,7 +2018,78 @@ h6 {
 }
 
 #enquiry .container a:hover {
-  color: #d2bc8f;
+  color: #03afff;
+}
+
+.services--wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  grid-gap: 5em;
+  margin-top: 2rem;
+}
+
+@media (min-width: 992px) {
+  .services--wrapper {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    grid-gap: 10rem;
+    grid-row-gap: 10rem;
+  }
+}
+
+.services--item {
+  position: relative;
+  width: 100%;
+}
+
+@media (min-width: 992px) {
+  .services--item:nth-child(2n) {
+    -webkit-transform: translateY(10rem);
+            transform: translateY(10rem);
+  }
+}
+
+.services--item-image {
+  position: relative;
+}
+
+.services--item-image img {
+  display: block;
+  width: 100%;
+  height: 22.5rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 0 auto;
+  border-radius: .25rem;
+  background-color: black;
+}
+
+.services--item-info {
+  position: relative;
+  z-index: 2;
+  width: 80%;
+  border-radius: .25rem;
+  -webkit-box-shadow: 0 -80px 50px rgba(0, 0, 0, 0.125);
+          box-shadow: 0 -80px 50px rgba(0, 0, 0, 0.125);
+  text-align: center;
+  padding: 2rem;
+  margin: 0 auto;
+  margin-top: -5rem;
+  background-color: white;
+}
+
+.services--item-info .divider {
+  margin: 1.5rem auto;
+}
+
+@media (min-width: 992px) {
+  .services--more {
+    text-align: center;
+    margin-top: 15rem;
+    margin-bottom: 2rem;
+  }
 }
 
 #testimonial {
@@ -2122,7 +2266,7 @@ h6 {
   padding-bottom: .3rem;
 }
 
-#mailling-list {
+#mailing-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2144,18 +2288,18 @@ h6 {
 }
 
 @media (min-width: 992px) {
-  #mailling-list {
+  #mailing-list {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
   }
-  #mailling-list > * + * {
+  #mailing-list > * + * {
     margin-left: 5rem;
   }
 }
 
-#mailling-list:after {
+#mailing-list:after {
   position: absolute;
   bottom: -0.35rem;
   left: 0;
@@ -2242,6 +2386,42 @@ h6 {
   }
 }
 
+.peter h5 {
+  font-size: .75rem;
+  font-weight: normal;
+  letter-spacing: .2em;
+}
+
+.peter .small-text {
+  font-size: .75rem;
+  font-weight: normal;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  line-height: 1.5;
+  letter-spacing: .2em;
+}
+
+.peter .header--right {
+  -webkit-transform: translateY(1.5rem);
+          transform: translateY(1.5rem);
+  -webkit-transition: all .25s;
+  transition: all .25s;
+}
+
+.peter #header.is-scroll .header--right {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  -webkit-transition: all .25s;
+  transition: all .25s;
+}
+
+.peter #header.is-scroll-up .header--right {
+  -webkit-transform: translateY(1.25rem);
+          transform: translateY(1.25rem);
+  -webkit-transition: all .25s;
+  transition: all .25s;
+}
+
 .peter .header--logo h6 {
   font-family: "Bodoni", serif;
   text-transform: none;
@@ -2249,9 +2429,23 @@ h6 {
   font-size: 1.25rem;
 }
 
-.peter .header--menu-item {
+.peter .header--menu-wrapper > ul .header--menu-item {
+  font-size: .75rem;
+  font-weight: normal;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  line-height: 1.5;
   letter-spacing: .2em;
-  font-weight: normal !important;
+}
+
+.peter .footer--menu-item {
+  font-size: .75rem;
+  font-weight: normal;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  line-height: 1.5;
+  letter-spacing: .2em;
+  margin: .5rem 1rem;
 }
 
 .peter .flickity-prev-next-button .arrow {
@@ -2274,7 +2468,7 @@ h6 {
   width: 100%;
   height: 100%;
   color: white;
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(204, 204, 204, 0.25);
 }
 
 .peter .hero--carousel-content h1 {
@@ -2283,6 +2477,7 @@ h6 {
   max-width: 75rem;
   margin: 0 auto;
   text-align: center;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.75);
 }
 
 @media (min-width: 992px) {
@@ -2291,36 +2486,93 @@ h6 {
   }
 }
 
+.peter .intro--menu-link {
+  font-size: .75rem;
+  font-weight: normal;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  line-height: 1.5;
+  letter-spacing: .2em;
+  border-bottom-width: .1rem;
+}
+
+@media (min-width: 992px) {
+  .peter .services--item:nth-child(2n) {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+.peter .services--item-info {
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.125);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.125);
+}
+
+.peter .services--more {
+  margin-top: 5rem;
+}
+
+.peter #testimonial {
+  display: none;
+  padding-bottom: 8rem;
+}
+
 .peter #membership {
   padding-bottom: 5rem !important;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.25))), url("./img/membership/background.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.25)), url("./img/membership/background.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0))), url("./img/membership/background.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0)), url("./img/membership/background.jpg");
   background-size: cover;
+  background-attachment: fixed;
   color: white;
-  text-shadow: 0 0 50px rgba(0, 0, 0, 0.75);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+@media (min-width: 992px) {
+  .peter #membership {
+    background-attachment: scroll;
+  }
 }
 
 .peter #membership .membership--item-image img {
+  width: 90%;
   position: relative;
   z-index: 2;
   margin-bottom: 2rem;
+  -webkit-transition: all .25s;
+  transition: all .25s;
 }
 
-.peter #membership .membership--item-image::after {
+.peter #membership .membership--item-image:after {
   content: '';
   display: block;
-  width: 60%;
-  height: 8rem;
+  width: 80%;
+  height: 11rem;
   margin: 0 auto;
   background-image: none;
   background-color: black;
   position: absolute;
-  top: 1.5rem;
-  right: 3.5rem;
+  top: 1rem;
+  left: 2.5rem;
   -webkit-filter: blur(10px);
           filter: blur(10px);
   z-index: 1;
   opacity: .5;
+  -webkit-transition: all .25s;
+  transition: all .25s;
+}
+
+.peter #membership .membership--item-image:hover img {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-transition: all .25s;
+  transition: all .25s;
+}
+
+.peter #membership .membership--item-image:hover:after {
+  top: 1.5rem;
+  left: 3rem;
+  -webkit-transition: all .25s;
+  transition: all .25s;
 }
 
 .peter #membership .membership--item-info ul:before, .peter #membership .membership--item-info ul:after {
@@ -2329,6 +2581,12 @@ h6 {
 
 .peter #membership .membership--item-info ul li {
   color: unset;
+  font-size: .75rem;
+  font-weight: normal;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  line-height: 1.5;
+  letter-spacing: .2em;
   font-weight: bold;
 }
 
@@ -2337,11 +2595,35 @@ h6 {
 }
 
 .peter #membership .membership--item-info ul li.is-disabled {
-  color: #e6e6e6;
+  color: #bfbfbf;
+}
+
+.peter #membership .membership--item-fee {
+  font-weight: normal;
 }
 
 .peter #membership .membership--item-fee span {
   color: white;
+}
+
+.peter #membership .membership--item-apply {
+  font-size: .75rem;
+  font-weight: normal;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  line-height: 1.5;
+  letter-spacing: .2em;
+  margin-top: 2rem;
+}
+
+.peter #membership .membership--item-apply a {
+  border: .2rem solid;
+  padding: 1rem 2rem;
+  font-weight: bold;
+}
+
+.peter #membership .master-key .membership--item-apply {
+  font-weight: bold;
 }
 
 .peter .private-club-peter--carousel {
@@ -2365,13 +2647,19 @@ h6 {
   width: 100%;
   height: 100%;
   color: white;
-  background-color: rgba(0, 0, 0, 0.25);
+  text-shadow: 1.5px 1.5px 0 rgba(0, 0, 0, 0.5);
   z-index: 4;
   pointer-events: none;
 }
 
 .peter .private-club-peter--carousel-overlay > div {
   text-align: center;
+  background-color: rgba(0, 0, 0, 0.75);
+  padding: 5rem;
+}
+
+.peter .private-club-peter--carousel-overlay h1 {
+  font-size: 5rem;
 }
 
 .peter .private-club-peter--carousel-overlay h5 {
@@ -2379,50 +2667,59 @@ h6 {
 }
 
 .peter .private-club-peter--carousel-item {
-  width: 100%;
-  height: 100vh;
-  max-height: 50rem;
+  width: auto;
+  height: calc(100vh - 4rem);
+  max-height: 80rem;
   background-size: cover;
   background-position: center;
 }
 
-.peter .private-club-peter--carousel-item:nth-child(1) {
-  background-image: url("./img/private-club/01.jpg");
+.peter .private-club-peter--carousel-item img {
+  height: 100%;
+  width: auto;
+  -o-object-fit: unset;
+     object-fit: unset;
 }
 
-.peter .private-club-peter--carousel-item:nth-child(2) {
-  background-image: url("./img/private-club/02.jpg");
+.peter #enquiry h5 {
+  margin-bottom: 1rem;
 }
 
-.peter .private-club-peter--carousel-item:nth-child(3) {
-  background-image: url("./img/private-club/03.jpg");
+.peter #mailing-list {
+  border: none !important;
 }
 
-.peter .private-club-peter--carousel-item:nth-child(4) {
-  background-image: url("./img/private-club/04.jpg");
+.peter #mailing-list:after {
+  display: none !important;
 }
 
-.peter .private-club-peter--carousel-item:nth-child(5) {
-  background-image: url("./img/private-club/05.jpg");
+.peter .mailing-list-title h2 {
+  margin-top: 0rem;
+  font-size: .85rem;
+  font-weight: normal;
+  letter-spacing: .2em;
+  font-family: "Montserrat", sans-serif;
 }
 
-.peter .private-club-peter--carousel-item:nth-child(6) {
-  background-image: url("./img/private-club/06.jpg");
+.peter .footer--outer::after {
+  display: none;
 }
 
-.peter .private-club-peter--carousel-item:nth-child(7) {
-  background-image: url("./img/private-club/07.jpg");
+.peter .footer--logo {
+  display: block;
+  width: 6rem;
+  height: 6rem;
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1);
+  opacity: .25;
+  margin: 2rem auto;
 }
 
-.peter .private-club-peter--carousel-item:nth-child(8) {
-  background-image: url("./img/private-club/08.jpg");
+.peter .footer--social {
+  font-size: 1.7rem;
 }
 
-.peter .private-club-peter--carousel-item:nth-child(9) {
-  background-image: url("./img/private-club/09.jpg");
-}
-
-.peter .private-club-peter--carousel-item:nth-child(10) {
-  background-image: url("./img/private-club/10.jpg");
+.peter .footer--menu {
+  margin-bottom: 2.5rem;
 }
 /*# sourceMappingURL=style.css.map */
